<resources>
    <string name="app_name">FedUni Millionaire 30339249</string>
    <string name="game_title">Who Wants to be a Millionaire?</string>
    <string name="btn_start_game">Start Game</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_hot_seat">Hot Seat</string>
    <string name="btn_highscores">Highscores</string>
    <string name="btn_edit_questions">Manage Questions</string>
    <string name="highscores_entry_label">Name for Highscores:</string>
    <string name="hint_name">Name</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_okay">OK</string>
    <string name="btn_return">Return to Menu</string>
    <string name="btn_return_and_save">Save and Return</string>
    <string name="toast_highscore_saved">Highscore saved!</string>
    <string name="question_format">%1$s</string>
    <string name="question_choice_format">%1$s</string>
    <string name="question_choice_audience_format">%1$s - %2$.1f%%</string>
    <string name="question_progress_format">Question: %1$d of %2$d</string>
    <string name="question_playing_for_format">Playing for $%1$,.0f</string>
    <string name="safe_money_format">You have $%1$,.0f</string>
    <string name="game_end_win">Congratulations!</string>
    <string name="game_end_lose">Better Luck Next Time!</string>
    <string name="game_end_format">You have won $%1$,.0f</string>
    <string name="game_end_lose_format">You didn\'t win anything.</string>
    <string name="game_end_stats_format">You answered %1$d of the %2$d questions correctly.</string>
    <string name="img_desc_bronze_medal">A clip art bronze medal.</string>
    <string name="img_desc_trophy">A clip art gold medal.</string>
    <string name="action_sort_by">Sort By</string>
    <string name="action_order_by">Order By</string>
    <string name="question_answers">Answers: %1$d</string>
    <string name="delete">Delete</string>
    <string name="img_desc_highscore_actions">Show context menu for highscore.</string>
    <string name="img_desc_question_actions">Show context menu for question.</string>
    <string name="questions">Question Library</string>
    <string name="action_add">Add Question</string>
    <string name="hint_question">Question?</string>
    <string name="editor_add_question">New Question</string>
    <string name="editor_edit_question">Edit Question</string>
    <string name="editor_confirm_add">Add</string>
    <string name="editor_confirm_edit">Edit</string>
    <string name="difficulty">Difficulty:</string>
    <string name="hint_correct_answer">Answer</string>
    <string name="incorrect_answers">Incorrect Answers:</string>
    <string name="img_desc_add_incorrect_answer">Add new incorrect answer.</string>
    <string name="dialog_add_incorrect_answer_title">Add Incorrect Answer</string>
    <string name="dialog_add_incorrect_answer_msg">Please enter the incorrect answer...</string>
    <string name="lifeline_5050">50:50</string>
    <string name="lifeline_ask_the_audience">Ask the Audience</string>
    <string name="lifeline_switch">Switch</string>
    <string name="toast_highscore_permission_denied">Saving highscore without location! Permission denied!</string>
    <string name="perm_rationale_location">By granting location permissions, your highscores will appear on the world map.</string>
    <string name="show_in_map">Show in Map</string>
    <string name="shuffle_shake_msg">Question answers shuffled!</string>
    <string-array name="arr_sort_by">
        <item>Name</item>
        <item>Money Won</item>
        <item>Completed On</item>
    </string-array>
    <string-array name="arr_order_by">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
</resources>